# cosmwasm-vm

./: .gitignore  Cargo.toml  LICENSE.md  README.md  SPEC.md  bacon.toml  flake.nix  kani.rs  rust-toolchain.toml
.github/workflows/: build.yaml
docs/orchestrate/: book.toml
docs/orchestrate/src/: README.md  SUMMARY.md  tutorial-dex.md
docs/orchestrate/src/concepts/: README.md  address-handlers.md  concepts.md  custom-handler.md  direct-dispatch.md
fixtures/: crypto_verify.wasm  cw20_ics20.wasm  cw4_group.wasm  recursion_test.wasm  wyndex_factory.wasm  wyndex_pair.wasm
fixtures/recursion-test/: Cargo.toml
fixtures/recursion-test/src/: lib.rs
orchestrate/: Cargo.toml  README.md
orchestrate/examples/: custom_address_handler.rs  custom_handler.rs  tests.rs
orchestrate/src/: api.rs  error.rs  fetcher.rs  ibc.rs  lib.rs  wasm_builder.rs
orchestrate/src/vm/: account.rs  address.rs  bank.rs  cw20_ics20.rs  error.rs  mod.rs  state.rs
orchestrate/tests/: crypto_verify.rs  integration.rs
research/: Cargo.toml
src/: lib.rs  vm.rs  wasmi.rs
src/tests/: mod.rs  wasmi.rs
std/: Cargo.toml
std/src/: lib.rs
vm/: Cargo.toml
vm-wasmi/: Cargo.toml
vm-wasmi/src/: code_gen.rs  error.rs  host_functions.rs  lib.rs  semantic.rs  validation.rs  version.rs  vm.rs
vm-wasmi/tests/: bare.rs  code_gen.rs  group_contract.rs  helpers.rs  hook.rs  orchestration.rs  reply.rs
vm/src/: bank.rs  executor.rs  has.rs  host.rs  input.rs  lib.rs  loader.rs  memory.rs  system.rs  tagged.rs  transaction.rs  vm.rs  wasmi.rs
