[workspace]
members = ["vm", "vm-wasmi", "orchestrate"]
exclude = ["fixtures/recursion-test"]
resolver = "2"


[workspace.dependencies]
cosmwasm-std = { git = "https://github.com/dzmitry-lahoda-forks/cosmwasm", rev = "677fa9c04b07a4934db82a6a9aa9e68fa13fcff9", default-features = false, features = [
  "iterator",
  "cosmwasm_1_2",
] }
cosmwasm-crypto = { git = "https://github.com/dzmitry-lahoda-forks/cosmwasm", rev = "677fa9c04b07a4934db82a6a9aa9e68fa13fcff9" }

serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
log = { version = "0.4", default-features = false }
num = { version = "0.4", default-features = false }
wasmi = { version = "0.30", default-features = false }
wasm-instrument = { version = "0.4.0", default-features = false }
wasmi-validation = { version = "0.5.0", default-features = false }