[package]
name = "cosmwasm-orchestrate"
version = "0.1.0"
edition = "2021"

[features]
cosmwasm_1_1 = ["cosmwasm-std/cosmwasm_1_1", "cosmwasm-vm/cosmwasm_1_1", "cosmwasm-vm-wasmi/cosmwasm_1_1"]
cosmwasm_1_2 = ["cosmwasm-std/cosmwasm_1_2", "cosmwasm-vm/cosmwasm_1_2", "cosmwasm-vm-wasmi/cosmwasm_1_2", "cosmwasm_1_1"]

[dependencies]
cosmwasm-vm = { path = "../vm" }
cosmwasm-vm-wasmi = { path = "../vm-wasmi" }
cosmwasm-std = { git = "https://github.com/ComposableFi/cosmwasm", rev = "34af48221c90e6818fe341d6d5b15116dfeab671", features = [
  "stargate",
  "ibc3",
  "staking"
] }
cosmwasm-crypto = { git = "https://github.com/ComposableFi/cosmwasm", rev = "34af48221c90e6818fe341d6d5b15116dfeab671" }
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
wasmi = "0.22"
wasm-instrument = "0.2"
log = "0.4"
sha2 = "0.10"
reqwest = "0.11"
base64 = "0.13.1"
async-trait = "0.1.58"
bech32 = "0.9.1"
bs58 = "0.4.0"

[dev-dependencies]
tokio = { version = "1.23", features = [ "rt", "macros", "rt-multi-thread" ] }
env_logger = "0.10"
hex = { version = "0.4", features = ["alloc"] }
