[package]
name = "cosmwasm-orchestrate"
version = "0.1.0"
edition = "2021"

[features]
default = ["std"]
std = ["reqwest", "cosmwasm-std/std"]

[dependencies]
cosmwasm-vm = { path = "../vm" }
cosmwasm-vm-wasmi = { path = "../vm-wasmi" }
cosmwasm-std = { git = "https://github.com/ComposableFi/cosmwasm", rev = "34af48221c90e6818fe341d6d5b15116dfeab671", default-features = false, features = [
  "stargate",
  "ibc3",
  "staking", 
  "cosmwasm_1_2"
] }
ed25519-zebra = { version = "3.1.0", default-features = false }
libsecp256k1 = { version = "0.7.1", default-features = false, features = [ "hmac", "static-context" ] }
serde_json = { version = "1.0", default-features = false, features = [ "alloc" ] }
serde = { version = "1.0", default-features = false, features = [ "derive", "alloc" ] }
wasmi = { version = "0.26", default-features = false }
wasm-instrument = { version = "0.2", default-features = false }
log = "0.4"
sha2 = { version = "0.10", default-features = false }
reqwest = { version = "0.11", optional = true }
base64 = { version = "0.13.1", default-features = false }
async-trait = "0.1.58"
bech32 = { version = "0.9.1", default-features = false }
bs58 = { version = "0.4.0", default-features = false, features = [ "alloc" ] }
rand_core = { version = "0.6.4", default-features = false, features = [ "alloc" ] }
rand_chacha = { version = "0.3.1", default-features = false }

[dev-dependencies]
tokio = { version = "1.24", features = [ "rt", "macros", "rt-multi-thread" ] }
env_logger = "0.10"
hex = { version = "0.4", features = ["alloc"] }
