[package]
name = "research"
version = "0.2.0"
edition = "2021"


[[bin]]
name = "research"
path = "bin/research.rs"

[features]
default = ["iterator", "stargate", "ibc3"]
iterator = ["cosmwasm-vm/iterator"]
stargate = ["cosmwasm-vm/stargate"]
ibc3 = ["cosmwasm-vm/ibc3"]
std = ["cosmwasm-std/std"]

[dependencies]
cosmwasm-crypto.workspace = true
cosmwasm-std = { workspace = true, default-features = false, features = [ "iterator", "cosmwasm_1_2" ] }
cosmwasm-vm = { path = "../vm", default-features = false }
cosmwasm-vm-wasmi = { path = "../vm-wasmi" }
either = { version = "1.8", default-features = false }
env_logger = "0.9"
hex = { version = "0.4", default-features = false, features = ["alloc"] }
log = { workspace = true, default-features = false }
serde = { workspace = true, default-features = false, features = ["derive"] }
serde_json = { workspace = true, default-features = false, features = ["alloc"] }
wasm-instrument = { workspace = true, default-features = false }
wasmi = { workspace = true, default-features = false }
wasmi-validation = { workspace = true, default-features = false }
wat = "1.0"

# benches
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-opentelemetry = "*"
opentelemetry = "*"
