[package]
name = "cosmwasm-minimal-std"
version = "0.1.0"
edition = "2021"

[features]
default = []
iterator = []
stargate = []
ibc3 = []

[dependencies]
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
base64 = { version = "0.13", default-features = false, features = ["alloc"] }
