[package]
name = "cosmwasm-vm-wasmi"
version = "0.2.0"
edition = "2021"

[features]
default = ["iterator", "stargate", "ibc3"]
iterator = ["cosmwasm-vm/iterator"]
stargate = ["cosmwasm-vm/stargate"]
ibc3 = ["cosmwasm-vm/ibc3"]
std = ["cosmwasm-std/std", "cosmwasm-vm/std"]

[dependencies]
serde = { workspaace = true, default-features = false, features = ["derive"] }
serde_json = { workspaace = true, default-features = false, features = ["alloc"] }
either = { version = "1.8", default-features = false }
log = { workspace = true, default-features = false }
wasmi = { version = "0.26", default-features = false }
wasmi-validation = { version = "0.5", default-features = false }
wasm-instrument = { version = "0.2", default-features = false }
cosmwasm-std = { workspace = true, default-features = false, features = [
  "iterator",
  "cosmwasm_1_2"
] }
cosmwasm-vm = { path = "../vm", default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"] }

[dev-dependencies]
wat = "1.0"
env_logger = "0.9"
cosmwasm-crypto = { workspace = true }

cw20-ics20 = { git = "https://github.com/CosmWasm/cw-plus", rev = "53dc88fdb81888cbd3dae8742e7318b35d3d0c0f", default-features = false, features = [
  "library",
] }
