[package]
name = "cosmwasm-vm"
version = "0.1.0"
edition = "2021"
authors = [
  "Hussein Ait Lahcen hussein.aitlahcen@gmail.com",
  "Abdullah Eryuzlu abdullaheryuzlu@gmail.com",
  "Composable Developers",
]
homepage = "https://composable.finance"

[features]
default = ["iterator", "stargate", "ibc3"]
iterator = ["cosmwasm-std/iterator"]
stargate = ["cosmwasm-std/stargate"]
ibc3 = ["cosmwasm-std/ibc3"]

[dependencies]
cosmwasm-std = { git = "https://github.com/ComposableFi/cosmwasm", rev = "21351cc1ced863b9af7c8a69f923036bc919b3b1", default-features = false, features = [
  "iterator",
] }
either = { version = "1.8", default-features = false }
log = { version = "0.4", default-features = false }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }


[dev-dependencies]
wat = "1.0"
env_logger = "0.9"
