[package]
name = "cosmwasm-vm"
version = "0.1.0"
edition = "2021"
authors = [
  "Hussein Ait Lahcen hussein.aitlahcen@gmail.com",
  "Abdullah Eryuzlu abdullaheryuzlu@gmail.com",
  "Composable Developers",
]
homepage = "https://composable.finance"

[features]
default = ["iterator", "stargate", "ibc3"]
iterator = ["cosmwasm-std/iterator"]
stargate = ["cosmwasm-std/stargate"]
ibc3 = ["cosmwasm-std/ibc3"]
cosmwasm_1_1 = ["cosmwasm-std/cosmwasm_1_1"]
cosmwasm_1_2 = ["cosmwasm-std/cosmwasm_1_2", "cosmwasm_1_1"]

[dependencies]
cosmwasm-std = { git = "https://github.com/ComposableFi/cosmwasm", rev = "34af48221c90e6818fe341d6d5b15116dfeab671", default-features = false, features = [
  "iterator",
] }
log = { version = "0.4", default-features = false }
num = { version = "0.4", default-features = false }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }


[dev-dependencies]
wat = "1.0"
env_logger = "0.9"
