[package]
name = "cosmwasm-vm"
version = "0.1.0"
edition = "2021"
authors = [
  "Hussein Ait Lahcen hussein.aitlahcen@gmail.com",
  "Abdullah Eryuzlu abdullaheryuzlu@gmail.com",
  "Composable Developers",
]
homepage = "https://composable.finance"

[features]
default = ["iterator", "stargate", "ibc3"]
iterator = ["cosmwasm-std/iterator"]
stargate = ["cosmwasm-std/stargate"]
ibc3 = ["cosmwasm-std/ibc3"]
std = ["cosmwasm-std/std"]

[dependencies]
cosmwasm-std = { workspace = true, default-features = false, features = [
  "iterator",
  "cosmwasm_1_2",
] }
log = { workspace = true, default-features = false }
num = { workspace = true, default-features = false }
serde = { workspace = true, default-features = false, features = ["derive"] }
serde_json = { workspace = true, default-features = false, features = ["alloc"] }


[dev-dependencies]
wat = "1.0"
env_logger = "0.9"
